# vikunja-mcp-py

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: __init__.py  config.py  context.py  models.py  server.py
src/dependencies/: __init__.py  checker.py
src/engine/: __init__.py  focus_engine.py
src/tools/: __init__.py  handlers.py
src/vikunja/: __init__.py  client.py
tests/: test_context.py  test_dependencies.py  test_handlers.py  test_models.py
